fix: add background and foreground theme to popover and dialog components (#1433)
Popovers and dialogs did not look very well on dark mode and that's because their foreground and backgrounds were not setup to use the new theme module system. This PR applies the background and foreground theme so that the content of popovers and modals are still readable in dark mode.

--- a/packages/dialog/src/_variables.scss
+++ b/packages/dialog/src/_variables.scss
@@ -1,3 +1,4 @@
+@use "@vrembem/core/theme";
 @use "@vrembem/core";
 
 $prefix-block: core.$prefix-block !default;
@@ -8,8 +9,8 @@ $prefix-modifier-value: core.$prefix-modifier-value !default;
 $z-index: 500 !default;
 $padding: 1em !default;
 $spacing: 0.5em !default;
-$background: white !default;
-$foreground: null !default;
+$foreground: theme.get("foreground") !default;
+$background: theme.get("background") !default;
 $border: null !default;
 $sep-border: core.$border !default;
 $border-radius: core.$border-radius !default;
